--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "@mui/toolpad": "^0.1.51",
     "@tanstack/react-table": "^8.21.3",
     "@toolpad/core": "^0.16.0",
+    "chart.js": "^4.5.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-zoom": "^2.2.0",
+    "date-fns": "^3.6.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-router": "^7.8.2"
   },
