--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.2.0",
     "date-fns": "^3.6.0",
+    "lightweight-charts": "^5.0.8",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
