--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "lightweight-charts": "^5.0.8",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
-    "react-router": "^7.8.2"
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
